manifest/tekton/examples/triggers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-el
  namespace: diploe2-lunafelipe1997
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: el-event-listener-cicd.142326f7-9998-4329-b02e-803519aff129.k8s.civo.com
    http:
      paths:
      - path: /diploe2-lunafelipe1997
        pathType: Prefix
        backend:
          service:
            name: el-event-listener-cicd
            port:
              number: 8080
